syntax = "proto3";

option java_package = "org.whk.protobuf.message";
option java_outer_classname = "LoginReqProto";

message LoginReq{
  int64 userId = 1;

  string token = 2;

  int32 serverId = 3;
}